--- a/index.html
+++ b/index.html
@@ -4,35 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RA^3 Hackers</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #001F54, #0057B8, #003F87);
-            color: white;
-            overflow-x: hidden;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f7f7f7;
+            color: #333;
             line-height: 1.6;
+            overflow-x: hidden;
         }
         header {
-            background: #002D62;
+            background-color: #141414;
             color: white;
             text-align: center;
             padding: 30px 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            position: sticky;
-            top: 0;
-            z-index: 100;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         header h1 {
             margin: 0;
-            font-size: 3.5rem;
-            text-transform: uppercase;
-            letter-spacing: 2px;
+            font-size: 3rem;
+            font-weight: 500;
         }
         header p {
-            margin: 5px 0;
-            font-size: 1.3rem;
-            letter-spacing: 1.5px;
+            margin: 10px 0;
+            font-size: 1.2rem;
             font-weight: 300;
         }
         .hero {
@@ -51,19 +47,19 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 31, 84, 0.6);
+            background: rgba(0, 0, 0, 0.6);
         }
         .hero-text {
             position: relative;
             text-align: center;
+            color: white;
             z-index: 2;
             padding: 0 20px;
         }
         .hero-text h2 {
-            font-size: 2.8rem;
+            font-size: 3rem;
             margin: 0;
-            text-transform: uppercase;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+            font-weight: 500;
         }
         .hero-text p {
             font-size: 1.2rem;
@@ -71,53 +67,64 @@
             font-weight: 300;
         }
         section {
-            padding: 40px 20px;
+            padding: 60px 20px;
             max-width: 1200px;
             margin: 0 auto;
+            background-color: white;
             box-sizing: border-box;
-            background-color: rgba(0, 31, 84, 0.7);
-            border-radius: 10px;
+            border-radius: 15px;
             margin-bottom: 30px;
-            transition: all 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
-        section:hover {
-            background-color: rgba(0, 31, 84, 0.9);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        section h3 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            font-weight: 500;
         }
-        .about p, .team ul li {
-            font-size: 1.3rem;
-            line-height: 1.8;
+        section p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            font-weight: 300;
+            max-width: 900px;
+            margin: 0 auto 20px;
         }
         .team ul {
             list-style: none;
             padding: 0;
-            margin: 20px 0 0;
-            max-width: 600px;
+            margin: 0;
             font-size: 1.2rem;
-            margin: 0 auto;
+            text-align: left;
+            color: #333;
+            margin-top: 20px;
         }
         .team ul li {
             margin: 10px 0;
             padding: 12px;
-            background: rgba(0, 0, 0, 0.3);
-            border-radius: 5px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            transition: background 0.3s ease;
+            background-color: #f1f1f1;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
         }
         .team ul li:hover {
-            background: rgba(255, 255, 255, 0.2);
+            background-color: #e1e1e1;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
         }
         footer {
-            background: #001F54;
+            background-color: #141414;
             color: white;
             text-align: center;
-            padding: 15px 20px;
+            padding: 20px 20px;
+        }
+        footer p {
             font-size: 1rem;
-            letter-spacing: 0.5px;
+            margin: 0;
+            font-weight: 300;
         }
         footer a {
             color: #4DB8FF;
             text-decoration: none;
+            font-weight: 500;
         }
         footer a:hover {
             text-decoration: underline;
