--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
+            background: linear-gradient(135deg, #1A1A1A, #1E2A3A);
+            color: white;
             line-height: 1.6;
             overflow-x: hidden;
         }
@@ -19,7 +19,7 @@
             color: white;
             text-align: center;
             padding: 30px 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
         header h1 {
             margin: 0;
@@ -60,6 +60,7 @@
             font-size: 3rem;
             margin: 0;
             font-weight: 500;
+            text-transform: uppercase;
         }
         .hero-text p {
             font-size: 1.2rem;
@@ -70,16 +71,17 @@
             padding: 60px 20px;
             max-width: 1200px;
             margin: 0 auto;
-            background-color: white;
+            background-color: #2C3E50;
             box-sizing: border-box;
             border-radius: 15px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         section h3 {
             font-size: 2.5rem;
             margin-bottom: 20px;
             font-weight: 500;
+            color: #3498db;
         }
         section p {
             font-size: 1.2rem;
@@ -95,19 +97,19 @@
             margin: 0;
             font-size: 1.2rem;
             text-align: left;
-            color: #333;
+            color: white;
             margin-top: 20px;
         }
         .team ul li {
             margin: 10px 0;
             padding: 12px;
-            background-color: #f1f1f1;
+            background-color: #34495E;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
         .team ul li:hover {
-            background-color: #e1e1e1;
+            background-color: #1A242F;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
         }
         footer {
@@ -122,7 +124,7 @@
             font-weight: 300;
         }
         footer a {
-            color: #4DB8FF;
+            color: #3498db;
             text-decoration: none;
             font-weight: 500;
         }
@@ -151,10 +153,10 @@
     <section class="team">
         <h3>Our Team</h3>
         <ul>
-            <li>Abhradeep</li>
-            <li>Aditya</li>
-            <li>Rohit</li>
-            <li>Anusha</li>
+            <li>Abhradeep Kayal</li>
+            <li>Anusha Gupta</li>
+            <li>Rohit Das</li>
+            <li>Aditya Shaw</li>
         </ul>
     </section>
 
