--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
 
     <section class="about">
-        <p>We are RA<sup>3</sup> Hackers, a passionate group of first-year tech enthusiasts from IIEST Shibpur. With our minds set on innovation and our hearts devoted to technology, we take pride in solving real-world problems and pushing the boundaries of what is possible. Our journey has just begun, and the future holds limitless opportunities!</p>
+        <p>We are RA<sup>3</sup> Hackers, a passionate group of first-year tech enthusiasts from IIEST Shibpur. With our minds set on innovation and our hearts devoted to technology, we take pride in solving real-world problems and pushing the boundaries of what is possible. Our journey has just begun!</p>
     </section>
 
     <section class="team">
