--- a/index.html
+++ b/index.html
@@ -4,134 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RA^3 Hackers</title>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #1A1A1A, #1E2A3A);
-            color: white;
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-        header {
-            background-color: #141414;
-            color: white;
-            text-align: center;
-            padding: 30px 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
-        header h1 {
-            margin: 0;
-            font-size: 3rem;
-            font-weight: 500;
-        }
-        header p {
-            margin: 10px 0;
-            font-size: 1.2rem;
-            font-weight: 300;
-        }
-        .hero {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 60vh;
-            background: url('https://source.unsplash.com/1600x900/?technology,hacking') no-repeat center center/cover;
-            position: relative;
-            overflow: hidden;
-        }
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.6);
-        }
-        .hero-text {
-            position: relative;
-            text-align: center;
-            color: white;
-            z-index: 2;
-            padding: 0 20px;
-        }
-        .hero-text h2 {
-            font-size: 3rem;
-            margin: 0;
-            font-weight: 500;
-            text-transform: uppercase;
-        }
-        .hero-text p {
-            font-size: 1.2rem;
-            margin-top: 10px;
-            font-weight: 300;
-        }
-        section {
-            padding: 60px 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-            background-color: #2C3E50;
-            box-sizing: border-box;
-            border-radius: 15px;
-            margin-bottom: 30px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-        section h3 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            font-weight: 500;
-            color: #3498db;
-        }
-        section p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-            margin-bottom: 20px;
-            font-weight: 300;
-            max-width: 900px;
-            margin: 0 auto 20px;
-        }
-        .team ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            font-size: 1.2rem;
-            text-align: left;
-            color: white;
-            margin-top: 20px;
-        }
-        .team ul li {
-            margin: 10px 0;
-            padding: 12px;
-            background-color: #34495E;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-        .team ul li:hover {
-            background-color: #1A242F;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-        }
-        footer {
-            background-color: #141414;
-            color: white;
-            text-align: center;
-            padding: 20px 20px;
-        }
-        footer p {
-            font-size: 1rem;
-            margin: 0;
-            font-weight: 300;
-        }
-        footer a {
-            color: #3498db;
-            text-decoration: none;
-            font-weight: 500;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
     <header>
